set(cls_dir ${CMAKE_INSTALL_LIBDIR}/rados-classes)
add_library(cls_tabular SHARED cls_tabular.cc cls_tabular_utils.cc)
target_link_libraries(cls_tabular re2 arrow parquet Boost::date_time)
set_target_properties(cls_tabular PROPERTIES VERSION "1.0.0" SOVERSION "1")
install(TARGETS cls_tabular DESTINATION ${cls_dir})
